...
  String get navHome => 'Home';

  @override
  String get navNewShipment => 'New Shipment';

  @override
  String get navSettings => 'Settings';

  @override
  String get settingsTitle => 'Settings';

  @override
  String get settingsAppearance => 'Appearance';
...
  String get languageGerman => 'German';

  @override
  String get languageChinese => 'Chinese';

  @override
  String get languageFrench => 'French';

  @override
  String get languageSpanish => 'Spanish';

  @override
  String get languageItalian => 'Italian';

  @override
  String get languagePortuguese => 'Portuguese';

  @override
  String get languageDutch => 'Dutch';

  @override
  String get languagePolish => 'Polish';
...
  String get languageMaltese => 'Maltese';

  @override
  String get languageIrish => 'Irish';

  @override
  String get languageArabic => 'Arabic';

  @override
  String get languageTurkish => 'Turkish';

  @override
  String get languageHebrew => 'Hebrew';
...
