...
  String get navHome => 'Início';

  @override
  String get navNewShipment => 'Novo Envio';

  @override
  String get navSettings => 'Configurações';

  @override
  String get settingsTitle => 'Configurações';

  @override
  String get settingsAppearance => 'Aparência';

  @override
  String get settingsThemeMode => 'Modo de Tema';

  @override
  String get settingsThemeLightTooltip => 'Modo Claro';
...
  String get settingsAiProvidersSubtitle => 'Configurar modelos de IA';

  @override
  String get settingsAbout => 'Sobre';

  @override
  String get settingsLanguageTitle => 'Idioma';

  @override
  String get settingsLanguageSubtitle => 'Selecionar idioma da aplicação';

  @override
  String get languageEnglish => 'Inglês';
...
