...
  String get navHome => 'Inicio';

  @override
  String get navNewShipment => 'Nuevo Envío';

  @override
  String get navSettings => 'Configuración';

  @override
  String get settingsTitle => 'Configuración';

  @override
  String get settingsAppearance => 'Apariencia';
...
